before install to install packages
https://docs.travis-ci.com/user/installing-dependencies/

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 language: python3
 
-install:
-- apt-get -y install librsvg2-bin pdftk
+before_install:
+- sudo apt-get -qq update
+- sudo apt-get -y install librsvg2-bin pdftk
 script:
 - ./merge_badges.sh
 
