--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,1 @@
-flask==0.12.2
-itsdangerous==0.24
-jinja2==2.9.6
-markupsafe==1.0
-werkzeug==0.12.2
-wtforms==2.1
-pyflakes==1.6.0
-gunicorn
+-r app/requirements.txt
