Fixes #77 to make the page responsive

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
 - sudo apt-get -qq update
 - sudo apt-get -y install librsvg2-bin pdftk
 - sudo pip install pyflakes
+- sudo pip install selenium
 
 script:
 - python app/tests/test.py
