--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
 before_install:
 - sudo apt-get -qq update
 - sudo apt-get -y install librsvg2-bin pdftk
-- sudo pip install -r requirements/test.txt -r requirements/prod.txt
+- pip install -r requirements/test.txt -r requirements/prod.txt
 - ( cd app && python main.py ) & # run the app in the background
 - sleep 1 && wget http://localhost:5000 > /dev/null  # wait for the app to start
 
