--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,7 +7,9 @@ werkzeug==0.12.2
 wtforms==2.1
 pyflakes==1.6.0
 flask-compress==1.4.0
-gunicorn==19.7.1
 selenium==3.5.0
 nose==1.3.7
-pypdf2
+pypdf2==1.26.0
+defusedxml==0.5.0
+cairocffi==0.6.0
+cairosvg==2.0.3
