--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,16 @@ language: python3
 
 before_install:
 - sudo apt-get -qq update
+- sudo apt-get -y install librsvg2-bin pdftk libfontconfig  build-essential chrpath libssl-dev libxft-dev libfreetype6-dev libfreetype6 libfontconfig1-dev libfontconfig1
+- sudo -H pip install -r requirements/test.txt
+- wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2
+- tar -xjf phantomjs-2.1.1-linux-x86_64.tar.bz2
+- sudo rm -rf /usr/local/phantomjs/bin/phantomjs
+- mv phantomjs-2.1.1-linux-x86_64 phantomjs
+- sudo mv phantomjs /usr/local/phantomjs/bin/
+- "phantomjs --version"
 - sudo apt-get -y install librsvg2-bin pdftk
-- sudo pip install -r test-requirements.txt
+- sudo pip install -r requirements/test.txt
 
 script:
 - nosetests app/tests/test.py -v --with-coverage
