--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,10 @@ before_install:
 - sudo apt-get -y install pdftk
 - sudo apt-get -y install python3-pip
 - sudo apt-get install python-virtualenv
-- wget https://github.com/mozilla/geckodriver/releases/download/v0.11.1/geckodriver-v0.11.1-linux64.tar.gz
-- mkdir geckodriver
-- tar -xzf geckodriver-v0.11.1-linux64.tar.gz -C geckodriver
-- export PATH=$PATH:$PWD/geckodriver
+- wget https://chromedriver.storage.googleapis.com/2.33/chromedriver_linux64.zip
+- mkdir chromedriver
+- unzip chromedriver_linux64.zip -d chromedriver
+- export PATH=$PATH:$PWD/chromedriver
 
 install:
 - virtualenv  -p python3 ../flask_env
