--- a/app.json
+++ b/app.json
@@ -2,6 +2,11 @@
     "name": "BadgeYay",
     "description": "A fully functional badges generator using flask",
     "repository": "https://github.com/fossasia/badgeyay/",
+    "env": {
+        "ENV_ROLE": {
+          "required": true
+        }
+      },
     "keywords": [
         "badgeyay",
         "fossasia",
