--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,13 @@ language: python3
 sudo: required
 
 addons:
-  firefox: "55.0"
+  firefox: 55.0
   apt:
     packages:
       - python-dev
 
 python:
-  - '3.5'
+  - 3.5
 
 before_install:
 - sudo apt-get -qq update
@@ -28,8 +28,8 @@ install:
 - pip3 install -r requirements/test.txt
 
 before_script:
-- "export DISPLAY=:99.0"
-- "sh -e /etc/init.d/xvfb start"
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 - sleep 3
 
 script:
@@ -56,4 +56,4 @@ deploy:
 
 after_success:
 - deactivate
-- 'bash <(curl -s https://codecov.io/bash)'
+- bash <(curl -s https://codecov.io/bash)
