--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 install:
 - virtualenv  -p python3 ../flask_env
 - source ../flask_env/bin/activate
-- pip3 install -r requirements.txt --cache-dir $HOME/.pip-cache
+- pip3 install -r requirements/test.txt --cache-dir $HOME/.pip-cache
 
 before_script:
 - export DISPLAY=:99.0
