--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ addons:
 
 python:
   - 3.5
-
+cache:
+  directories:
+    - $HOME/.pip-cache/
+    
 before_install:
 - sudo apt-get -qq update
 - sudo apt-get -y install librsvg2-bin
@@ -25,7 +28,7 @@ before_install:
 install:
 - virtualenv  -p python3 ../flask_env
 - source ../flask_env/bin/activate
-- pip3 install -r requirements/test.txt
+- pip3 install -r requirements/test.txt --cache-dir $HOME/.pip-cache
 
 before_script:
 - export DISPLAY=:99.0
