--- a/.editorconfig
+++ b/.editorconfig
@@ -11,8 +11,22 @@ trim_trailing_whitespace = true
 [*.html]
 indent_size = 4
 
+[*.{js,py}]
+charset = utf-8
+
+[*.py]
+indent_style = space
+indent_size = 4
+
 [*.js]
 indent_size = 4
 
 [*.css]
 indent_size = 4
+
+[Makefile]
+indent_style = tab
+
+[{package.json,.travis.yml}]
+indent_style = space
+indent_size = 2
