Revert "Merge branch 'development' of https://github.com/fossasia/badgeyay into 442-mock-issue"
This reverts commit 572fff17c662dead5f3a398a5f93dc93a07425af, reversing
changes made to a6076a3b5a2a3466b0cae471c39fafdd814de0e3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,7 @@ addons:
 
 python:
   - 3.5
-cache:
-  directories:
-    - $HOME/.pip-cache/
-    
+
 before_install:
 - sudo apt-get -qq update
 - sudo apt-get -y install librsvg2-bin
@@ -28,7 +25,7 @@ before_install:
 install:
 - virtualenv  -p python3 ../flask_env
 - source ../flask_env/bin/activate
-- pip3 install -r requirements/test.txt --cache-dir $HOME/.pip-cache
+- pip3 install -r requirements/test.txt
 
 before_script:
 - export DISPLAY=:99.0
