--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python3
 sudo: required
 
 addons:
-  firefox: 55.0
   apt:
     packages:
       - python-dev
@@ -17,10 +16,6 @@ before_install:
 - sudo apt-get -y install pdftk
 - sudo apt-get -y install python3-pip
 - sudo apt-get install python-virtualenv
-- wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz
-- mkdir geckodriver
-- tar -xzf geckodriver-v0.19.0-linux64.tar.gz -C geckodriver
-- export PATH=$PATH:$PWD/geckodriver
 
 install:
 - virtualenv  -p python3 ../flask_env
@@ -34,7 +29,8 @@ before_script:
 
 script:
 - python app/main.py >> log.txt 2>&1  &
-# - nosetests app/tests/test.py -v --with-coverage | uncommented as tests are not ready yet.
+- sleep 2
+- nosetests app/tests/test_api.py -v --with-coverage 
 - python3 -m pyflakes .
 
 after_success:
