--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,6 @@ python:
 
 before_install:
 - sudo apt-get -qq update
-- sudo apt-get -y install librsvg2-bin
-- sudo apt-get -y install pdftk
 - sudo apt-get -y install python3-pip
 - sudo apt-get install python-virtualenv
 
@@ -23,17 +21,11 @@ install:
 - pip3 install pytest
 - pip3 install -r requirements/test.txt
 
-before_script:
-- export DISPLAY=:99.0
-- sh -e /etc/init.d/xvfb start
-- sleep 3
-
 script:
 - python app/main.py >> log.txt 2>&1  &
 - sleep 2
-- nosetests app/tests/test_api.py -v --with-coverage 
+- pytest app/tests/test_api.py 
 - python3 -m pyflakes .
-- pytest
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
