--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python3
 sudo: required
 
 addons:
-  firefox: 55.0
   apt:
     packages:
       - python-dev
@@ -18,15 +17,12 @@ before_install:
 - sudo apt-get -qq update
 - sudo apt-get -y install python3-pip
 - sudo apt-get install python-virtualenv
-- wget https://github.com/mozilla/geckodriver/releases/download/v0.19.0/geckodriver-v0.19.0-linux64.tar.gz
-- mkdir geckodriver
-- tar -xzf geckodriver-v0.19.0-linux64.tar.gz -C geckodriver
-- export PATH=$PATH:$PWD/geckodriver
 
 install:
 - virtualenv  -p python3 ../flask_env
 - source ../flask_env/bin/activate
-- pip3 install -r requirements/test.txt --cache-dir $HOME/.pip-cache
+- pip3 install pytest
+- pip3 install -r requirements/test.txt
 
 before_script:
 - export DISPLAY=:99.0
@@ -35,12 +31,12 @@ before_script:
 
 script:
 - python app/main.py >> log.txt 2>&1  &
-- nosetests app/tests/test.py -v --with-coverage
+- sleep 2
+- nosetests app/tests/test_api.py -v --with-coverage 
 - python3 -m pyflakes .
-- cd cli
-- python setup.py install
-- cd ..
-- badgeyay -i app/static/uploads/yellow_futuristic.png -n sample/businesspass.png.csv
+- pytest
+
+
 
 after_success:
 - bash <(curl -s https://codecov.io/bash)
