Rectifies frontend to match v1
Rectifies frontend to match v1. Added proper styles and neccessary
script adjustments.

Fixes #488

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "badgeyay-frontend",
+  "name": "badgeyay",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for badgeyay-frontend goes here",
+  "description": "Small description for badgeyay goes here",
   "license": "MIT",
   "author": "",
   "directories": {
