Fixes#498 Rectify Travis CI tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -70,7 +70,11 @@ matrix:
       - JOBS=1
 
     before_install:
+      - npm install
+      - npm install -g ember-cli
+      - npm install -g eslint
       - npm config set spin false
+
 
     script:
       - cd frontend
