--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ matrix:
       - 3.5
     cache:
       directories:
-        - $HOME/.pip-cache/
+        - $HOME/v1/.pip-cache/
     
     before_install:
       - sudo apt-get -qq update
@@ -29,7 +29,7 @@ matrix:
     install:
       - virtualenv  -p python3 ../flask_env
       - source ../flask_env/bin/activate
-      - pip3 install -r v1/requirements/test.txt --cache-dir $HOME/.pip-cache
+      - pip3 install -r v1/requirements/test.txt --cache-dir $HOME/v1/.pip-cache
 
     before_script:
       - export DISPLAY=:99.0
@@ -38,10 +38,7 @@ matrix:
 
     script:
       - python v1/app/main.py >> log.txt 2>&1  &
-      - python backend/app/main.py >> log.txt 2>&1  &
       - nosetests v1/app/tests/test.py -v --with-coverage
-      - nosetests backend/app/tests/test_api.py -v --with-coverage
-      - python3 -m pyflakes .
       - cd v1/cli
       - python setup.py install
       - cd ..
@@ -50,6 +47,39 @@ matrix:
     after_success:
       - bash <(curl -s https://codecov.io/bash)
 
+  - language: python3
+
+    apt:
+      packages:
+      - python-dev
+
+    python:
+      - 3.5
+    cache:
+      directories:
+        - $HOME/backend/.pip-cache/
+    
+    before_install:
+      - sudo apt-get -qq update
+      - sudo apt-get -y install python3-pip
+      - sudo apt-get install python-virtualenv
+
+    install:
+      - virtualenv  -p python3 ../flask_env
+      - source ../flask_env/bin/activate
+      - pip3 install -r backend/requirements/test.txt --cache-dir $HOME/backend/.pip-cache
+
+    before_script:
+      - export DISPLAY=:99.0
+      - sh -e /etc/init.d/xvfb start
+      - sleep 3
+
+    script:
+      - python backend/app/main.py >> log.txt 2>&1  &
+      - nosetests backend/app/tests/test_api.py -v --with-coverage
+
+    after_success:
+      - bash <(curl -s https://codecov.io/bash)
 
   - language: node_js
     node_js:
