--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,16 +1,20 @@
 click==6.7
 flask==0.12.2
 itsdangerous==0.24
-jinja2==2.9.6
+jinja2==2.10
 markupsafe==1.0
-werkzeug==0.12.2
+werkzeug==0.14.1
 wtforms==2.1
 pyflakes==1.6.0
 flask-compress==1.4.0
-selenium==3.5.0
+selenium==3.11.0
 nose==1.3.7
 pypdf2==1.26.0
 defusedxml==0.5.0
-cairocffi==0.6.0
+cairocffi==0.8.0
 cairosvg==2.0.3
 flask-cors==3.0.3
+psycopg2==2.7.4
+PyJWT==1.4.2
+Flask-SQLAlchemy==2.1
+
