--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -4,6 +4,7 @@ CairoSVG==2.0.3
 cffi==1.11.5
 click==6.7
 defusedxml==0.5.0
+flasgger==0.8.3
 Flask==0.12.2
 Flask-Compress==1.4.0
 Flask-Cors==3.0.3
@@ -12,6 +13,7 @@ Flask-SQLAlchemy==2.1
 gunicorn==19.7.1
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
 lxml==4.2.1
 Mako==1.0.7
 nose==1.3.7
@@ -24,6 +26,8 @@ PyPDF2==1.26.0
 python-dateutil==2.7.2
 python-dotenv==0.8.2
 python-editor==1.0.3
+pytz==2018.4
+PyYAML==3.12
 selenium==3.11.0
 six==1.11.0
 SQLAlchemy==1.2.7
