--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "Badgeyay is a simple badge generator which generates printable badges in a pdf.",
-  "license": "MIT",
+  "license": "GNU GENERAL PUBLIC LICENSE Version 3",
   "author": "FOSSASIA",
   "directories": {
     "doc": "doc",
@@ -17,15 +17,16 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "broccoli-asset-rev": "^2.6.0",
+    "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.1.0",
-    "ember-cli": "~3.0.0",
-    "ember-cli-app-version": "^3.1.3",
+    "ember-cli": "~3.1.4",
+    "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.12.0",
+    "ember-cli-babili": "~0.2.0",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
-    "ember-cli-deploy-git": "^1.3.2",
+    "ember-cli-deploy-git": "^1.3.3",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
@@ -33,17 +34,25 @@
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-cli-babili": "~0.2.0",
-    "ember-data": "~3.0.2",
+    "ember-data": "~3.1.1",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.0.0",
-    "ember-resolver": "^4.5.4",
-    "ember-source": "~3.0.0",
-    "ember-welcome-page": "^3.1.1",
+    "ember-load-initializers": "^1.1.0",
+    "ember-resolver": "^4.5.5",
+    "ember-source": "~3.1.2",
+    "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.1.0",
-    "loader.js": "^4.6.0"
+    "loader.js": "^4.7.0",
+    "semantic-ui-ember": "^3.0.3"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "babel-eslint": "^8.2.3",
+    "ember": "^1.0.3",
+    "ember-suave": "^4.0.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-ember-suave": "^1.0.0",
+    "minimatch": "^3.0.2"
   }
 }
