--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-resolver": "^4.5.5",
+    "ember-simple-auth": "^1.6.0",
     "ember-source": "~3.1.2",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.1.0",
