Fixes #747: Correct .jshintrc for jQuery Support (#748)

--- a/frontend/.jshintrc
+++ b/frontend/.jshintrc
@@ -45,7 +45,8 @@
 	"supernew": false,
 	"validthis": true,
 	"noyield": false,
-	"browser": true,
+    "browser": true,
+    "jquery": true,
 	"devel": false,
     "node": false,
     "jquery": true,
