--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,13 +40,14 @@
     "ember-href-to": "^1.15.1",
     "ember-load-initializers": "^1.1.0",
     "ember-resolver": "^4.5.5",
-    "ember-simple-auth": "^1.6.0",
     "ember-source": "~3.1.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^5.2.0",
+    "emberfire": "^2.0.10",
     "loader.js": "^4.7.0",
-    "semantic-ui-ember": "^3.0.3"
+    "semantic-ui-ember": "^3.0.3",
+    "torii": "^0.10.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
@@ -54,8 +55,8 @@
   "dependencies": {
     "babel-eslint": "^8.2.3",
     "ember": "^1.0.3",
-    "ember-suave": "^4.0.1",
     "eslint": "^4.19.1",
+    "ember-suave": "^4.0.1",
     "eslint-plugin-ember-suave": "^1.0.0",
     "minimatch": "^3.0.4"
   }
