--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -1,33 +1,60 @@
 alembic==0.9.9
+blinker==1.4
+CacheControl==0.12.4
+cachetools==2.1.0
 cairocffi==0.8.0
 CairoSVG==2.0.3
+certifi==2018.4.16
 cffi==1.11.5
+chardet==3.0.4
 click==6.7
+cssselect==1.0.3
 defusedxml==0.5.0
+firebase-admin==2.10.0
+flasgger==0.8.3
 Flask==0.12.2
 Flask-Compress==1.4.0
 Flask-Cors==3.0.3
+Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.1
+google-api-core==1.1.2
+google-auth==1.4.1
+google-cloud-core==0.28.1
+google-cloud-firestore==0.29.0
+google-cloud-storage==1.9.0
+google-resumable-media==0.3.1
+googleapis-common-protos==1.5.3
 gunicorn==19.7.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
 lxml==4.2.1
 Mako==1.0.7
+MarkupSafe==1.0
+mistune==0.8.3
+msgpack-python==0.5.6
 nose==1.3.7
 Pillow==5.1.0
-psycopg2-binary==2.7.4
+protobuf==3.5.2.post1
+psycopg2==2.7.4
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
 pycparser==2.18
 pyflakes==1.6.0
 PyJWT==1.4.2
 PyPDF2==1.26.0
-python-dateutil==2.7.2
+python-dateutil==2.7.3
 python-dotenv==0.8.2
 python-editor==1.0.3
 pytz==2018.4
 PyYAML==3.12
+requests==2.18.4
+rsa==3.4.2
 six==1.11.0
 SQLAlchemy==1.2.7
+tinycss==0.4
+urllib3==1.22
 Werkzeug==0.14.1
 WTForms==2.1
