Fixes #783 : Added Flake8 in Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,13 @@ matrix:
     install:
       - virtualenv  -p python3 ../flask_env
       - source ../flask_env/bin/activate
+      - pip3 install flake8
       - pip3 install -r backend/requirements/test.txt --cache-dir $HOME/backend/.pip-cache
 
     script:
       - python backend/app/main.py >> log.txt 2>&1  &
       - python backend/app/main.py > /dev/null &
+      - flake8 backend/blueprint/api
       - py.test --cov ../  ./backend/app/tests/test_api.py
 
     after_success:
