--- a/backend/blueprint/api/requirements.txt
+++ b/backend/blueprint/api/requirements.txt
@@ -27,7 +27,6 @@ googleapis-common-protos==1.5.3
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
-jwt==0.5.3
 lxml==4.2.1
 Mako==1.0.7
 MarkupSafe==1.0
@@ -39,6 +38,8 @@ psycopg2==2.7.4
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
+PyJWT==1.6.3
+PyPDF2==1.26.0
 python-dateutil==2.7.3
 python-editor==1.0.3
 pytz==2018.4
