--- a/backend/blueprint/requirements.txt
+++ b/backend/blueprint/requirements.txt
@@ -14,6 +14,7 @@ cssselect2==0.2.1
 defusedxml==0.5.0
 firebase-admin==2.10.0
 Flask==1.0.2
+flask-cors==3.0.3
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
@@ -24,6 +25,7 @@ google-cloud-firestore==0.29.0
 google-cloud-storage==1.9.0
 google-resumable-media==0.3.1
 googleapis-common-protos==1.5.3
+gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
@@ -32,7 +34,6 @@ Mako==1.0.7
 MarkupSafe==1.0
 msgpack-python==0.5.6
 Pillow==5.1.0
-pkg-resources==0.0.0
 protobuf==3.5.2.post1
 psycopg2==2.7.4
 pyasn1==0.4.2
