--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,9 +56,10 @@
   "dependencies": {
     "babel-eslint": "^8.2.3",
     "ember": "^1.0.3",
-    "eslint": "^4.19.1",
     "ember-suave": "^4.0.1",
+    "eslint": "^4.19.1",
     "eslint-plugin-ember-suave": "^1.0.0",
-    "minimatch": "^3.0.4"
+    "minimatch": "^3.0.4",
+    "node-sass": "^4.9.0"
   }
 }
