--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,13 +48,15 @@
     "loader.js": "^4.7.0",
     "semantic-ui": "^2.2.14",
     "semantic-ui-ember": "^3.0.3",
-    "torii": "^0.10.1"
+    "torii": "^0.10.1",
+    "ui-ember-slider": "^0.5.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
     "babel-eslint": "^8.2.3",
+    "bower": "^1.8.4",
     "ember": "^1.0.3",
     "ember-colpick": "^1.0.0",
     "ember-suave": "^4.0.1",
