Fixes #873 : Storing data of responses in ember data

--- a/app.json
+++ b/app.json
@@ -23,9 +23,8 @@
       }
     },
     "addons": [
-    "heroku-postgresql",
     {
-      "plan": "hobby-dev"
+      "plan": "heroku-postgresql"
     }
   ]
 }
