Fixes #437: Added Swagger UI

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -13,8 +13,9 @@ cryptography==1.9
 cssselect2==0.2.1
 defusedxml==0.5.0
 firebase-admin==2.10.0
+flasgger==0.8.3
 Flask==1.0.2
-flask-cors==3.0.3
+Flask-Cors==3.0.3
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.3.2
@@ -29,22 +30,27 @@ gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
 lxml==4.2.1
 Mako==1.0.7
 MarkupSafe==1.0
+marshmallow==2.15.3
+marshmallow-jsonapi==0.19.0.post0
+mistune==0.8.3
 msgpack-python==0.5.6
 Pillow==5.1.0
 protobuf==3.5.2.post1
 psycopg2==2.7.4
-psycopg2-binary==2.7.4
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyJWT==1.6.3
 PyPDF2==1.26.0
 python-dateutil==2.7.3
+python-dotenv==0.8.2
 python-editor==1.0.3
 pytz==2018.4
+PyYAML==3.12
 requests==2.18.4
 rsa==3.4.2
 six==1.11.0
@@ -53,4 +59,3 @@ tinycss2==0.6.1
 urllib3==1.22
 webencodings==0.5.1
 Werkzeug==0.14.1
-marshmallow-jsonapi
