Disabled Surge for reducing Build time

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,5 +63,5 @@ matrix:
       - npm test
 
     after_success:
-      - bash ./scripts/pr_deploy.sh
       - bash ./scripts/gh_deploy.sh
+      #- bash ./scripts/pr_deploy.sh
