--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,7 +41,7 @@
     "ember-load-initializers": "^1.1.0",
     "ember-notify": "^5.2.1",
     "ember-resolver": "^4.5.6",
-    "ember-source": "~3.2.0",
+    "ember-source": "^3.2.2",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.2.0",
     "emberfire": "^2.0.10",
@@ -56,7 +56,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.2.5",
     "bower": "^1.8.4",
     "ember": "^1.0.3",
     "ember-colpick": "^1.0.0",
