--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "babel-eslint": "^8.2.5",
     "bower": "^1.8.4",
     "ember": "^1.0.3",
