Fixes #1125 : 404 on page refresh

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,8 +49,7 @@
     "loader.js": "^4.7.0",
     "semantic-ui": "^2.3.2",
     "semantic-ui-ember": "^3.0.3",
-    "torii": "^0.10.1",
-    "ui-ember-slider": "^0.5.0"
+    "torii": "^0.10.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
