--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.7.0",
+    "ember-cli-pace": "^0.1.0",
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^7.2.0",
     "ember-cli-shims": "^1.2.0",
