--- a/cloud-functions/functions/package.json
+++ b/cloud-functions/functions/package.json
@@ -14,6 +14,7 @@
     "firebase": "^5.0.4",
     "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.0.4",
+    "moment": "^2.22.2",
     "nodemailer": "^4.6.7"
   },
   "devDependencies": {
