--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "ember-href-to": "^1.15.1",
     "ember-load-initializers": "^1.1.0",
     "ember-notify": "^5.2.1",
+    "ember-progress-bar": "^1.0.0",
     "ember-resolver": "^4.5.6",
     "ember-source": "^3.2.2",
     "ember-truth-helpers": "^2.0.0",
