Added Image Cropper Functionality

--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "colpick": "2.0.2",
     "seiyria-bootstrap-slider": "~6.0.6",
-    "pace": "^1.0.2"
+    "pace": "^1.0.2",
+    "Croppie": "croppie#^2.6.2"
   }
 }
