--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "ember-resolver": "^4.5.6",
     "ember-source": "^3.2.2",
     "ember-truth-helpers": "^2.0.0",
+    "ember-uuid": "^1.0.1",
     "ember-welcome-page": "^3.2.0",
     "emberfire": "^2.0.10",
     "eslint-plugin-ember": "^5.2.0",
@@ -59,6 +60,7 @@
     "async": "^2.6.1",
     "babel-eslint": "^8.2.6",
     "bower": "^1.8.4",
+    "croppie": "^2.6.2",
     "ember": "^1.0.3",
     "ember-colpick": "^1.0.0",
     "ember-suave": "^4.0.1",
