--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "@fortawesome/ember-fontawesome": "^0.1.2",
+    "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.1.0",
     "ember-cli": "~3.3.0",
@@ -31,6 +33,7 @@
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-notifications": "^4.3.3",
     "ember-cli-pace": "^0.1.0",
     "ember-cli-qunit": "^4.3.2",
     "ember-cli-sass": "^7.2.0",
