Create docker-compose.yml and update Dockerfile

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3-slim
 LABEL maintainer="Yash Ladha <yashladhapankajladha123@gmail.com>"
 
 
-ENV INSTALL_PATH /badgeyay
+ENV INSTALL_PATH /badgeyay/api
 RUN mkdir -p "$INSTALL_PATH"
 
 WORKDIR $INSTALL_PATH
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y wget git ca-cer
 
 
 # install deps
-RUN apt-get install -y --no-install-recommends build-essential python3-dev libpq-dev libevent-dev libmagic-dev && apt-get clean -y
+RUN apt-get install -y --no-install-recommends build-essential python3-dev libpq-dev libevent-dev libpng-dev zlib1g-dev libjpeg-dev libxml2-dev libxmlsec1-dev libmagic-dev && apt-get clean -y
 RUN apt-get install -y --no-install-recommends libpango1.0-0 libcairo2 libpq-dev python3-pip && apt-get clean -y
 
 # copy just requirements
