--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,12 +4,12 @@ LABEL maintainer="Yash Ladha <yashladhapankajladha123@gmail.com>"
 
 ENV INSTALL_PATH /badgeyay/api
 RUN mkdir -p "$INSTALL_PATH"
+RUN PYTHONPATH="$PYTHONPATH:/badgeyay/"
 
 WORKDIR $INSTALL_PATH
 
 # apt-get update and update some packages
 RUN apt-get update && apt-get install --no-install-recommends -y wget git ca-certificates curl && update-ca-certificates && apt-get clean -y
-
 
 # install deps
 RUN apt-get install -y --no-install-recommends build-essential python3-dev libpq-dev libevent-dev libpng-dev zlib1g-dev libjpeg-dev libxml2-dev libxmlsec1-dev libmagic-dev && apt-get clean -y
@@ -24,4 +24,8 @@ RUN pip3 install --no-cache-dir -r requirements.txt
 # copy remaining files
 COPY . .
 
-CMD ["gunicorn", "-b", ":8080", "api.run:app"]
+ENV FLASK_ENV="docker"
+
+ENV FLASK_APP run.py
+
+EXPOSE 5000
