--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,10 +21,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.2.0",
     "broccoli-asset-rev": "^2.7.0",
     "ember-ajax": "^3.1.0",
+    "ember-carousel": "^0.1.0",
     "ember-cli": "~3.3.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^6.16.0",
     "ember-cli-babili": "~0.2.0",
+    "ember-cli-carousel": "^1.0.4",
     "ember-cli-dependency-checker": "^3.0.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
@@ -43,6 +45,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-href-to": "^1.15.1",
     "ember-load-initializers": "^1.1.0",
+    "ember-qrcode-shim": "^0.3.0",
     "ember-resolver": "^4.5.6",
     "ember-source": "^3.2.2",
     "ember-truth-helpers": "^2.0.0",
