--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -18,6 +18,7 @@
     "colpick": "2.0.2",
     "seiyria-bootstrap-slider": "~6.0.6",
     "pace": "^1.0.2",
-    "Croppie": "croppie#^2.6.2"
+    "Croppie": "croppie#^2.6.2",
+    "qrcode": "^1.0.2"
   }
 }
