Issue 2025 Add docstrings for Response class and its various functions.

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ BADGEYAY_DATABASE_OWNER=postgres
 BADGEYAY_DATABASE_PASSWORD=postgres
 BADGEYAY_DATABASE=badgeyay
 
+FIREBASE_DB_URL='https://badgeyay-195bf.firebaseio.com',
+FIREBASE_STORAGE_BUCKET='badgeyay-195bf.appspot.com'
