--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -45,6 +45,7 @@ pycparser==2.18
 PyJWT==1.6.3
 PyPDF2==1.26.0
 python-dateutil==2.7.3
+python-decouple==3.1
 python-editor==1.0.3
 pytz==2018.4
 requests>=2.20.0
