--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,13 +45,14 @@
     "ember-load-initializers": "^1.1.0",
     "ember-resolver": "^4.5.6",
     "ember-source": "^3.2.2",
+    "ember-template-lint": "^1.5.0",
     "ember-truth-helpers": "^2.0.0",
     "ember-uuid": "^1.0.1",
     "ember-welcome-page": "^3.2.0",
     "emberfire": "^2.0.10",
-    "eslint-plugin-ember": "^5.2.0",
+    "eslint-plugin-ember": "^5.4.0",
     "loader.js": "^4.7.0",
-    "natives":"^1.1.6",
+    "natives": "^1.1.6",
     "semantic-ui": "^2.3.3",
     "semantic-ui-ember": "^3.0.3",
     "torii": "^0.10.1"
