--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,43 +17,44 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "@fortawesome/ember-fontawesome": "^0.1.2",
-    "@fortawesome/free-solid-svg-icons": "^5.2.0",
-    "broccoli-asset-rev": "^2.7.0",
-    "ember-ajax": "^3.1.0",
-    "ember-cli": "~3.3.0",
+    "@fortawesome/ember-fontawesome": "^0.1.14",
+    "@fortawesome/free-solid-svg-icons": "^5.10.1",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-ajax": "^5.0.0",
+    "ember-cli": "^3.11.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "^6.16.0",
+    "ember-cli-babel": "^7.9.0",
     "ember-cli-babili": "~0.2.0",
-    "ember-cli-dependency-checker": "^3.0.0",
+    "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-deploy": "^1.0.2",
     "ember-cli-deploy-build": "^1.1.1",
     "ember-cli-deploy-git": "^1.3.3",
-    "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars": "^3.1.0",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-notifications": "^4.3.3",
     "ember-cli-pace": "^0.1.0",
-    "ember-cli-qunit": "^4.3.2",
-    "ember-cli-sass": "^7.2.0",
+    "ember-cli-qunit": "^4.4.0",
+    "ember-cli-sass": "^10.0.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
-    "ember-data": "~3.3.0",
+    "ember-data": "^3.12.0",
     "ember-export-application-global": "^2.0.0",
-    "ember-href-to": "^1.15.1",
-    "ember-load-initializers": "^1.1.0",
-    "ember-resolver": "^4.5.6",
-    "ember-source": "^3.2.2",
-    "ember-template-lint": "^1.5.0",
-    "ember-truth-helpers": "^2.0.0",
-    "ember-uuid": "^1.0.1",
-    "ember-welcome-page": "^3.2.0",
+    "ember-href-to": "^3.1.0",
+    "ember-load-initializers": "^2.0.0",
+    "ember-resolver": "^5.2.1",
+    "ember-source": "^3.12.0",
+    "ember-template-lint": "^1.5.2",
+    "ember-truth-helpers": "^2.1.0",
+    "ember-uuid": "^2.0.0",
+    "ember-welcome-page": "^4.0.0",
     "emberfire": "^2.0.10",
-    "eslint-plugin-ember": "^5.4.0",
+    "eslint-plugin-ember": "^2.0.0",
     "loader.js": "^4.7.0",
     "natives": "^1.1.6",
-    "semantic-ui": "^2.3.3",
+    "sass": "^1.22.9",
+    "semantic-ui": "^2.4.2",
     "semantic-ui-ember": "^3.0.3",
     "torii": "^0.10.1"
   },
@@ -61,17 +62,17 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
-    "async": "^2.6.1",
-    "babel-eslint": "^8.2.6",
-    "bower": "^1.8.4",
-    "croppie": "^2.6.2",
+    "async": "^3.1.0",
+    "babel-eslint": "^10.0.2",
+    "bower": "^1.8.8",
+    "croppie": "^2.6.4",
     "ember": "^1.0.3",
     "ember-colpick": "^1.0.0",
     "ember-suave": "^4.0.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-ember-suave": "^1.0.0",
+    "eslint": "^6.1.0",
+    "eslint-plugin-ember-suave": "^2.0.0",
     "md5": "^2.2.1",
     "minimatch": "^3.0.4",
-    "node-sass": "^4.9.2"
+    "node-sass": "^4.12.0"
   }
 }
