--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "ember-cli-sass": "^10.0.0",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-stripe": "^2.0.0",
     "ember-data": "^3.12.0",
     "ember-export-application-global": "^2.0.0",
     "ember-href-to": "^3.1.0",
