--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "build": "ember build",
     "lint:js": "eslint ./*.js app config lib server tests",
     "start": "ember serve --port=4200",
-    "test": "ember test"
+    "test": "ember test",
+    "postinstall": "node -e \"try { require('fs').symlinkSync(require('path').resolve('node_modules/@bower_components'), 'bower_components', 'junction') } catch (e) { }\""
   },
   "devDependencies": {
     "@fortawesome/ember-fontawesome": "^0.1.2",
@@ -58,18 +59,21 @@
     "torii": "^0.10.1"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "^4.5 || 6.* || >= 7.*",
+    "yarn": ">= 1.0.0"
   },
   "dependencies": {
+    "@bower_components/pace": "HubSpot/pace",
     "async": "^2.6.1",
     "babel-eslint": "^8.2.6",
-    "bower": "^1.8.4",
-    "croppie": "^2.6.2",
+    "bootstrap-slider": "~6.0.6",
+    "croppie": "^2.6.4",
     "ember": "^1.0.3",
     "ember-colpick": "^1.0.0",
     "ember-suave": "^4.0.1",
     "eslint": "^4.19.1",
     "eslint-plugin-ember-suave": "^1.0.0",
+    "jquery-colpick": "^3.1.0",
     "md5": "^2.2.1",
     "minimatch": "^3.0.4",
     "node-sass": "^4.9.2"
