--- a/.travis.yml
+++ b/.travis.yml
@@ -51,13 +51,12 @@ matrix:
 
     before_install:
       - cd frontend
-      - npm install
-      - npm install --save ember-colpick
+      
       - npm install -g yarn
-      - npm install -g firebase-tools
+      
       - yarn install
-      - ember g ember-colpick
-      - npm config set spin false
+#       - ember g ember-colpick
+      
 
     script:
       - npm run lint:js
